--- a/src/app/showcase/showcase.component.html
+++ b/src/app/showcase/showcase.component.html
@@ -5,7 +5,7 @@
       <img src="/assets/showcase.png" alt="logo">
     </div>
     <div class="content-button">
-<button class="start-button" href="">zaczynamy</button>
+<button routerLink="/playground" class="start-button" href="">zaczynamy</button>
     </div>
   </div>
 </section>
