--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-showcase></app-showcase>
+<!-- <app-showcase></app-showcase>
+<app-playground></app-playground> -->
+<router-outlet></router-outlet>
