--- a/src/app/showcase/showcase.component.scss
+++ b/src/app/showcase/showcase.component.scss
@@ -33,7 +33,8 @@
                 font-family: 'Roboto', sans-serif;
                 font-family: 'Teko', sans-serif;
                 font-weight: 700;
-                -webkit-box-shadow: 8px 9px 3px 0px rgba(66, 68, 90, 1);
+                box-shadow: 0 9px #999;
+                // -webkit-box-shadow: 8px 9px 3px 0px rgba(66, 68, 90, 1);
                 transition: all 0.5s ease-in-out;
                 height: auto;
                 width: auto;
@@ -42,8 +43,14 @@
             }
 
             .start-button:hover {
-                transform: translateY(-20%);
+                box-shadow: 0 5px #666;
+                transform: translateY(9px);
                 cursor: pointer;
+            }
+
+            .start-button:active {
+                box-shadow: 0 5px #666;
+                transform: translateY(px);
             }
 
 
