--- a/src/app/categories/category-card/category-card.component.html
+++ b/src/app/categories/category-card/category-card.component.html
@@ -1,8 +1,8 @@
 <div class="card" style="width: 14rem;">
   <img src="{{categoryCard.image}}" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title"> {{categoryCard.title}}</h5>
+    <h5 class="card-title "> {{categoryCard.title}}</h5>
   
-    <a (click)="startQuiz(categoryCard.id)" class="button">zacznij quiz</a>
+    <a (click)="startQuiz(categoryCard.id)" class="button p-2">zacznij quiz</a>
   </div>
 </div>
