--- a/src/app/categories/categories.component.scss
+++ b/src/app/categories/categories.component.scss
@@ -4,15 +4,18 @@
     background-image: linear-gradient(to bottom, #5b446a, #906387);
     font-family: 'Roboto', sans-serif;
     font-family: 'Teko', sans-serif;
-    h2{
-        font-size: 4rem;
+
+    h2 {
+        font-size: calc(3rem + 0.5vw);
         font-weight: 900;
         color: whitesmoke;
         text-transform: uppercase;
         text-align: center;
         padding: 5vh 5vw;
+        text-shadow: 4px 3px 0px rgba(66, 68, 90, 1);
     }
-    .container{
+
+    .container {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
