--- a/src/app/score-page/score-page.component.scss
+++ b/src/app/score-page/score-page.component.scss
@@ -9,6 +9,7 @@
     font-family: 'Roboto', sans-serif;
     font-family: 'Teko', sans-serif;
 
+
     .image {
         display: flex;
         justify-content: center;
@@ -25,38 +26,42 @@
             flex-direction: column;
 
 
-            h2 {
-              
-                font-size: 4rem;
+            h1 {
+
+                font-size: calc(2rem + 1vh);
                 font-weight: 900;
                 color: whitesmoke;
                 text-transform: uppercase;
                 text-align: center;
 
             }
-            .spansLegend{
+
+            .spansLegend {
                 display: flex;
                 justify-content: space-evenly;
                 padding: 2vh 2vw;
-                .spanCorrect{
+                font-size: calc(0.5rem + 0.5vh);
+
+                .spanCorrect {
                     border-radius: 0.5rem;
                     background-color: #7dd87d;
                     color: white;
                     text-transform: uppercase;
                     padding: 1rem;
                 }
-                .spanPlayer{
+
+                .spanPlayer {
                     border-radius: 0.5rem;
                     background-color: white;
                     color: #5b446a;
                     text-transform: uppercase;
                     padding: 0.7rem;
                     border: #f8df69 solid 0.3rem;
-    
+
                 }
 
             }
-         
+
         }
 
         button {
@@ -65,7 +70,7 @@
             color: #5b446a;
             text-decoration: none;
             padding: 1vh;
-            margin:4vh;
+            margin: 4vh;
             text-transform: uppercase;
             border-radius: 0.4rem;
             font-family: 'Roboto', sans-serif;
@@ -91,6 +96,12 @@
             transform: translateY(px);
         }
 
+        .answers {
+            display: flex;
+           
+            flex-wrap: wrap;
+        }
+
         .card {
             font-family: 'Roboto', sans-serif;
             font-family: 'Teko', sans-serif;
@@ -101,16 +112,22 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             -webkit-box-shadow: 8px 9px 3px 0px rgba(66, 68, 90, 1);
+            
 
             &-question {
-                padding: 2vh 2vw;
-                font-size: 1vh;
+                padding: 1vh 1vw;
+
                 background-color: #7dd87d;
                 border-radius: 0.5rem;
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 text-transform: uppercase;
+                width: 100%;
+
+                h2 {
+                    font-size: calc(0.5vh + 0.5rem);
+                }
             }
 
             &-content {
@@ -138,11 +155,6 @@
 
                     }
 
-                    span:hover,
-                    span:active {
-                        background-color: rgb(226, 222, 222);
-                        cursor: pointer;
-                    }
 
                     .active {
                         background-color: rgb(226, 222, 222);
@@ -166,6 +178,7 @@
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
+
             gap: 2vh;
             justify-content: space-evenly;
             align-items: center;
@@ -174,4 +187,23 @@
 
     }
 
+
+}
+
+@media screen and (max-width: 900px) {
+    .card {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 50% 1fr;
+        min-width: 80vw;
+
+        &-question {
+            grid-column: 1/3;
+            height: 100%;
+        }
+
+        &-content {
+            grid-column: 1/3;
+        }
+
+    }
 }
