admin - new concept

--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -2,10 +2,12 @@
 
   <div class="admin-content">
     <h2>panel administracyjny</h2>
-    <mat-tab-group>
-      <mat-tab label="KATEGORIE"> <app-kategorie></app-kategorie> </mat-tab>
-      <mat-tab label="PYTANIA"> Content 2 </mat-tab>
- 
-    </mat-tab-group>
+<div class="toolbar">
+  <span routerLink="categories" routerLinkActive="active">kategorie</span>
+  <span>pytania</span>
+</div>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
   </div>
 </section>
