--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+  font-family: 'Teko', sans-serif;
 
 }
 html, body { height: 100%; }
