--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -4,7 +4,7 @@
     <h2>panel administracyjny</h2>
 <div class="toolbar">
   <span routerLink="categories" routerLinkActive="active">kategorie</span>
-  <span>pytania</span>
+  <span routerLink="questions" routerLinkActive="active">pytania</span>
 </div>
 <div class="container">
   <router-outlet></router-outlet>
