--- a/src/app/admin/admin/questions/question-list/question-list.component.html
+++ b/src/app/admin/admin/questions/question-list/question-list.component.html
@@ -1,18 +1,21 @@
 <section class="list">
 
   <div class="container">
-    <div class="title">
-      <h2>KATEGORIE</h2>
-      <button routerLink="addCategory" class="new">add new</button>
-    </div>
-   
-    
-    <mat-divider></mat-divider>
-    <table mat-table [dataSource]="categories" class="mat-elevation-z8">
+    <div class="header">
+    <h2>PYTANIA</h2>
+    <button class="new" routerLink="addCategory">add new</button>
+  </div>
+  <mat-divider></mat-divider>
+    <table mat-table [dataSource]="questions" class="mat-elevation-z8">
 
 
 
 
+
+      <ng-container matColumnDef="categoryId">
+        <th mat-header-cell *matHeaderCellDef>kategoria </th>
+        <td mat-cell *matCellDef="let element"> {{element.categoryId}} </td>
+      </ng-container>
 
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> id </th>
@@ -23,16 +26,13 @@
 
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> nazwa </th>
-        <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+        <th mat-header-cell *matHeaderCellDef> pytanie </th>
+        <td mat-cell *matCellDef="let element"> {{element.description  | slice:0:20}} .. </td>
       </ng-container>
-      <ng-container matColumnDef="img">
-        <th mat-header-cell *matHeaderCellDef> img </th>
-        <td mat-cell *matCellDef="let element"> <img src="{{element.image}}" alt=""> </td>
-      </ng-container>
+  
 
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> actions </th>
+        <th mat-header-cell *matHeaderCellDef> akcje </th>
         <td mat-cell *matCellDef="let element">
           <button class="edit" routerLink="/admin/categories/edit/{{element.id}}" >edit</button>
           <button class="delete"  mat-button color="warn">delete</button>
