--- a/src/app/admin/admin/questions/question-list/question-list.component.scss
+++ b/src/app/admin/admin/questions/question-list/question-list.component.scss
@@ -1,11 +1,8 @@
 .list{
-    padding: calc(2rem + 2vw);
+    padding: calc(1rem + 2vw);
 
 }
-img{
-  height: 10vh;
-  }
-  .edit{
+.edit{
     
     background-color: #7dd87d;
 
@@ -16,14 +13,14 @@ img{
     border-radius: 0.4rem;
     font-family: 'Roboto', sans-serif;
     font-family: 'Teko', sans-serif;
-    font-weight: 700;
+    font-weight: 300;
     box-shadow: 0 9px #999;
 
     transition: all 0.5s ease-in-out;
     border: none;
     cursor: pointer;
-    font-size: calc(0.5rem + 0.5vw);
-    width: 30%;
+    font-size: calc(0.3rem + 0.3vw);
+    width: 40%;
     height: 50%;
     align-self: center;
     justify-self: center;
@@ -40,14 +37,14 @@ img{
     border-radius: 0.4rem;
     font-family: 'Roboto', sans-serif;
     font-family: 'Teko', sans-serif;
-    font-weight: 700;
+    font-weight: 300;
     box-shadow: 0 9px #999;
 
     transition: all 0.5s ease-in-out;
     border: none;
     cursor: pointer;
-    font-size: calc(0.5rem + 0.5vw);
-    width: 30%;
+    font-size: calc(0.3rem + 0.3vw);
+    width: 50%;
     height: 50%;
     align-self: center;
     justify-self: center;
@@ -72,27 +69,14 @@ img{
     font-size: calc(0.3rem + 0.3vw);
     width: 20%;
     height: 20%;
-
-   
-    margin: 2vh;
-
+    align-self: center;
+    justify-self: center;
+    margin-left: 3px;
   }
-  .title{
+
+  .header{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
   }
-
-
-@media screen and (max-width: 500px) {
-    .list{
-        padding: 0.2rem;
-      max-width: 100vw;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    }
