--- a/src/app/admin/admin/categories/categories-add/categories-add.component.html
+++ b/src/app/admin/admin/categories/categories-add/categories-add.component.html
@@ -25,7 +25,7 @@
 
 
 
-      <button mat-flat-button color="accent" type="submit">ADD</button>
+      <button (click)="categoryAdd()" mat-flat-button color="accent" type="submit">ADD</button>
     </form>
   </mat-card>
 </div>
