--- a/src/app/admin/admin/categories/categories-list/categories-list.component.html
+++ b/src/app/admin/admin/categories/categories-list/categories-list.component.html
@@ -8,7 +8,7 @@
    
     
     <mat-divider></mat-divider>
-    <table mat-table [dataSource]="categories" class="mat-elevation-z8">
+    <table mat-table [dataSource]="categories$" class="mat-elevation-z8">
 
 
 
