--- a/src/app/admin/admin/questions/question-list/question-list.component.html
+++ b/src/app/admin/admin/questions/question-list/question-list.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="header">
     <h2>PYTANIA</h2>
-    <button class="new" routerLink="addCategory">add new</button>
+    <button class="new" routerLink="addQuestion">add new</button>
   </div>
   <mat-divider></mat-divider>
     <table mat-table [dataSource]="questions" class="mat-elevation-z8">
