--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,7 +1,7 @@
 <section class="categories">
   <h2>wybierz kategorię</h2>
   <div class="container">
-  <span *ngFor="let category of categories">
+  <span *ngFor="let category of categories$ | async">
   <app-category-card (Start)="startQuiz($event)" [categoryCard]="category"></app-category-card>
 </span>
 </div>
