--- a/src/app/admin/admin/questions/question-edit/question-edit.component.html
+++ b/src/app/admin/admin/questions/question-edit/question-edit.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <i routerLink="/admin/categories" class="fa-solid fa-arrow-left-long">back</i>
   <mat-card>
-    <h2>ADD CATEGORY</h2>
-    <form [formGroup]="questionAddForm" class="p-3" action="">
+    <h2>edit CATEGORY</h2>
+    <form [formGroup]="questionEditForm" class="p-3" action="">
       <div class="m-2">
 
       </div>
@@ -12,9 +12,9 @@
 
         <mat-form-field>
           <mat-label>kategorie</mat-label>
-          <mat-select>
+          <mat-select formControlName="categoryId"  >
           
-              <mat-option *ngFor="let category of categories " [value]="category.id">{{category.title}}</mat-option>
+              <mat-option *ngFor="let category of categories" [value]="category.id">{{category.title}}</mat-option>
           
           </mat-select>
         </mat-form-field>
@@ -59,8 +59,8 @@
 
 
 
-      <button (click)="questionAdd(questionAddForm.value)" mat-flat-button color="accent" type="submit">ADD</button>
+      <button (click)="questionEdit(questionId ,questionEditForm.value)" mat-flat-button color="accent" type="submit">ADD</button>
     </form>
   </mat-card>
-  {{questionAddForm.value | json}}
+  {{questionEditForm.value | json}}
 </div>
