--- a/src/app/admin/admin/questions/question-list/question-list.component.html
+++ b/src/app/admin/admin/questions/question-list/question-list.component.html
@@ -3,10 +3,10 @@
   <div class="container">
     <div class="header">
     <h2>PYTANIA</h2>
-    <button class="new" routerLink="addQuestion">add new</button>
+    <button class="new" routerLink="add">add new</button>
   </div>
   <mat-divider></mat-divider>
-    <table mat-table [dataSource]="questions" class="mat-elevation-z8">
+    <table mat-table [dataSource]="questions$ | async" class="mat-elevation-z8">
 
 
 
@@ -34,7 +34,7 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> akcje </th>
         <td mat-cell *matCellDef="let element">
-          <button class="edit" routerLink="/admin/categories/edit/{{element.id}}" >edit</button>
+          <button class="edit" routerLink="/admin/questions/edit/{{element.id}}" >edit</button>
           <button class="delete"  mat-button color="warn">delete</button>
         </td>
       </ng-container>
