--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -1,7 +1,10 @@
 <section class="admin">
 
   <div class="admin-content">
-    <h2>panel administracyjny</h2>
+    <div class="header">
+      <h2>panel administracyjny</h2>
+    </div>
+  
 <div class="toolbar">
   <span routerLink="categories" routerLinkActive="active">kategorie</span>
   <span routerLink="questions" routerLinkActive="active">pytania</span>
