--- a/src/app/admin/admin/categories/categories-list/categories-list.component.html
+++ b/src/app/admin/admin/categories/categories-list/categories-list.component.html
@@ -33,7 +33,7 @@
 
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> actions </th>
-        <td mat-cell *matCellDef="let element">
+        <td class="actions" mat-cell *matCellDef="let element">
           <button class="edit" routerLink="/admin/categories/edit/{{element.id}}">edit</button>
           <button (click)="delete(element.id)" class="delete" mat-button color="warn">delete</button>
         </td>
