--- a/src/app/admin/admin/categories/categories-list/categories-list.component.scss
+++ b/src/app/admin/admin/categories/categories-list/categories-list.component.scss
@@ -1,5 +1,12 @@
 .list{
     padding: calc(2rem + 2vw);
+    .actions{
+    
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      padding: 1rem;
+    }
 
 }
 img{
@@ -16,14 +23,14 @@ img{
     border-radius: 0.4rem;
     font-family: 'Roboto', sans-serif;
     font-family: 'Teko', sans-serif;
-    font-weight: 700;
+    font-weight: 300;
     box-shadow: 0 9px #999;
 
     transition: all 0.5s ease-in-out;
     border: none;
     cursor: pointer;
-    font-size: calc(0.5rem + 0.5vw);
-    width: 30%;
+    font-size: calc(0.3rem + 0.3vw);
+    width: 100%;
     height: 50%;
     align-self: center;
     justify-self: center;
@@ -40,14 +47,14 @@ img{
     border-radius: 0.4rem;
     font-family: 'Roboto', sans-serif;
     font-family: 'Teko', sans-serif;
-    font-weight: 700;
+    font-weight: 300;
     box-shadow: 0 9px #999;
 
     transition: all 0.5s ease-in-out;
     border: none;
     cursor: pointer;
-    font-size: calc(0.5rem + 0.5vw);
-    width: 30%;
+    font-size: calc(0.3rem + 0.3vw);
+    width: 100%;
     height: 50%;
     align-self: center;
     justify-self: center;
@@ -69,8 +76,8 @@ img{
     transition: all 0.5s ease-in-out;
     border: none;
     cursor: pointer;
-    font-size: calc(0.3rem + 0.3vw);
-    width: 20%;
+    font-size: calc(0.5rem + 0.5vw);
+    width: 50%;
     height: 20%;
 
    
