--- a/src/app/admin/admin/questions/question-list/question-list.component.html
+++ b/src/app/admin/admin/questions/question-list/question-list.component.html
@@ -33,7 +33,7 @@
 
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> akcje </th>
-        <td mat-cell *matCellDef="let element">
+        <td class="actions" mat-cell *matCellDef="let element">
           <button class="edit" routerLink="/admin/questions/edit/{{element.id}}" >edit</button>
           <button (click)="delete(element.id)" class="delete" >delete</button>
         </td>
