--- a/src/app/admin/admin/questions/question-list/question-list.component.scss
+++ b/src/app/admin/admin/questions/question-list/question-list.component.scss
@@ -1,7 +1,16 @@
 .list{
     padding: calc(1rem + 2vw);
+ 
+    .actions{
+    
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      padding: 1rem;
+    }
 
 }
+
 .edit{
     
     background-color: #7dd87d;
@@ -20,7 +29,7 @@
     border: none;
     cursor: pointer;
     font-size: calc(0.3rem + 0.3vw);
-    width: 40%;
+    width: 100%;
     height: 50%;
     align-self: center;
     justify-self: center;
@@ -30,7 +39,7 @@
     
     background-color: #d8927d;
 
-    color: #5b446a;
+    color: black;
     text-decoration: none;
     padding: 1vh;
     text-transform: uppercase;
@@ -44,7 +53,7 @@
     border: none;
     cursor: pointer;
     font-size: calc(0.3rem + 0.3vw);
-    width: 50%;
+    width: 100%;
     height: 50%;
     align-self: center;
     justify-self: center;
@@ -66,12 +75,13 @@
     transition: all 0.5s ease-in-out;
     border: none;
     cursor: pointer;
-    font-size: calc(0.3rem + 0.3vw);
-    width: 20%;
+    font-size: calc(0.5rem + 0.5vw);
+    width: 50%;
     height: 20%;
-    align-self: center;
-    justify-self: center;
-    margin-left: 3px;
+
+   
+    margin: 2vh;
+
   }
 
   .header{
@@ -79,4 +89,5 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 2vh;
   }
