--- a/src/app/quiz-card/quiz-card.component.scss
+++ b/src/app/quiz-card/quiz-card.component.scss
@@ -6,7 +6,7 @@
     width: 60vw;
     border-radius: 0.5rem;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 50% 50%;
     -webkit-box-shadow: 8px 9px 3px 0px rgba(66, 68, 90, 1);
 
     &-question {
@@ -20,7 +20,7 @@
         text-align: center;
 
         h2 {
-            font-size: calc(1rem + 0.5vw)
+            font-size: calc(0.5rem + 0.6vw)
         }
     }
 
@@ -34,8 +34,11 @@
             grid-template-columns: 1fr 1fr;
             gap: 1rem;
             text-align: center;
+        
+        
 
             span {
+          
                 border-bottom: 0.1rem solid rgb(174, 171, 171);
                 border-right: 0.1rem solid rgb(174, 171, 171);
                 border-radius: 0.5rem;
@@ -44,7 +47,8 @@
                 align-items: center;
                 justify-content: center;
                 text-transform: uppercase;
-                font-size: calc(1rem + 0.5vw);
+                text-align: center;
+                font-size: calc(0.5rem + 0.4vw);
                 font-weight: 500;
 
             }
