filter categories admin

--- a/src/app/admin/admin/categories/categories-list/categories-list.component.html
+++ b/src/app/admin/admin/categories/categories-list/categories-list.component.html
@@ -3,7 +3,8 @@
   <div class="container">
     <div class="title">
       <h2>KATEGORIE</h2>
-      <button routerLink="addCategory" class="new">add new</button>
+      <button routerLink="addCategory" class="new">dodaj +</button>
+      
     </div>
 
 
