--- a/src/app/admin/admin/questions/question-list/question-list.component.scss
+++ b/src/app/admin/admin/questions/question-list/question-list.component.scss
@@ -10,6 +10,18 @@
     }
 
 }
+.filter{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-shadow: 0 9px #999;
+  padding: 2rem;
+  margin: 1rem;
+  h3{
+    text-align: center;
+    text-transform: uppercase;
+  }
+}
 
 .edit{
     
