auth admin log-in

--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -10,6 +10,7 @@
   <span routerLink="questions" routerLinkActive="active">pytania</span>
 </div>
 <div class="container">
+  <button (click)="logout()">wyloguj</button>
   <router-outlet></router-outlet>
 </div>
   </div>
