--- a/src/app/score-page/score-page.component.scss
+++ b/src/app/score-page/score-page.component.scss
@@ -127,6 +127,7 @@
 
                 h2 {
                     font-size: calc(0.5vh + 0.5rem);
+                    padding: 1vh;
                 }
             }
 
