--- a/src/app/admin/admin/questions/question-add/question-add.component.html
+++ b/src/app/admin/admin/questions/question-add/question-add.component.html
@@ -13,9 +13,9 @@
 
         <mat-form-field>
           <mat-label>kategorie</mat-label>
-          <mat-select>
+          <mat-select formControlName="categoryId">
           
-              <mat-option *ngFor="let category of categories " [value]="category.id">{{category.title}}</mat-option>
+              <mat-option f *ngFor="let category of categories " [value]="category.id">{{category.title}}</mat-option>
           
           </mat-select>
         </mat-form-field>
@@ -62,6 +62,8 @@
 
       <button (click)="questionAdd(questionAddForm.value)" class="add" type="submit">dodaj</button>
     </form>
+
+    {{questionAddForm.value  | json}}
   </mat-card>
 
 </div>
