--- a/src/app/categories/categories.component.scss
+++ b/src/app/categories/categories.component.scss
@@ -13,6 +13,7 @@
         text-align: center;
         padding: 5vh 5vw;
         text-shadow: 4px 3px 0px rgba(66, 68, 90, 1);
+        line-height: 7vh;
     }
 
     .container {
@@ -21,7 +22,7 @@
         flex-wrap: wrap;
         justify-content: space-evenly;
         align-items: center;
-        gap: 1vh;
+        gap: 5vh;
         padding: 5vh 5vw;
     }
 }
