--- a/src/app/quiz-card/quiz-card.component.scss
+++ b/src/app/quiz-card/quiz-card.component.scss
@@ -2,8 +2,8 @@
     font-family: 'Roboto', sans-serif;
     font-family: 'Teko', sans-serif;
     background-color: whitesmoke;
-    height: 60vh;
-    width: 60vw;
+    height: 70vh;
+    width: 70vw;
     border-radius: 0.5rem;
     display: grid;
     grid-template-columns: 50% 50%;
@@ -20,7 +20,8 @@
         text-align: center;
 
         h2 {
-            font-size: calc(0.5rem + 0.6vw)
+            font-size: calc(0.5rem + 1vw);
+            text-decoration:solid;
         }
     }
 
