--- a/src/app/score-page/score-page.component.scss
+++ b/src/app/score-page/score-page.component.scss
@@ -98,7 +98,7 @@
 
         .answers {
             display: flex;
-           
+           justify-content: space-evenly;
             flex-wrap: wrap;
         }
 
@@ -126,7 +126,7 @@
                 width: 100%;
 
                 h2 {
-                    font-size: calc(0.5vh + 0.5rem);
+                    font-size: calc(0.3vw + 0.3rem);
                     padding: 1vh;
                 }
             }
@@ -176,14 +176,13 @@
         }
 
         .answers {
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
+        
 
             gap: 2vh;
             justify-content: space-evenly;
             align-items: center;
             padding: 2vh 2vw;
+            font-size: calc(2vw + 0.7rem);
         }
 
     }
@@ -191,20 +190,26 @@
 
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1000px) {
     .card {
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 50% 1fr;
-        min-width: 80vw;
+        grid-template-rows: 50% auto;
+        min-width: 60vw;
 
         &-question {
             grid-column: 1/3;
             height: 100%;
+            h2 {
+              
+                padding: 1vh;
+            }
         }
 
         &-content {
             grid-column: 1/3;
         }
 
+  
     }
+
 }
