--- a/src/app/showcase/showcase.component.html
+++ b/src/app/showcase/showcase.component.html
@@ -2,7 +2,7 @@
   <div class="content">
     <h1></h1>
     <div class="content-image">
-      <img src="/assets/showcase.png" alt="logo">
+      <img class="showcase-image" src="/assets/showcase.png" alt="logo">
     </div>
     <div class="content-button">
 <button routerLink="/categories" class="start-button" href="">zaczynamy</button>
